# test_ws

./: README.md
src/autopnp/ipa_building_navigation/common/src/: A_star_pathplanner.cpp  trolley_position_finder.cpp
src/autopnp/ipa_building_navigation/ros/src/: boosttest.cpp  room_sequence_planning_action_client.cpp  room_sequence_planning_action_server.cpp  room_sequence_planning_evaluation.cpp
src/autopnp/ipa_room_exploration/common/include/ipa_room_exploration/: boustrophedon_explorator.h  grid.h
src/autopnp/ipa_room_exploration/common/src/: boustrophedon_explorator.cpp  convex_sensor_placement_explorator.cpp  energy_functional_explorator.cpp  flow_network_explorator.cpp  grid_point_explorator.cpp  neural_network_explorator.cpp  room_rotator.cpp
src/autopnp/ipa_room_exploration/ros/launch/: room_exploration_action_server.launch  room_exploration_action_server_params.yaml
src/autopnp/ipa_room_exploration/ros/src/: coverage_check_server.cpp  fov_to_robot_mapper.cpp  room_exploration_action_client.cpp  room_exploration_action_server.cpp  room_exploration_evaluation.cpp
src/autopnp/ipa_room_exploration/ros/test/: room_exploration_client.launch
src/autopnp/ipa_room_segmentation/: CMakeLists.txt  package.xml
src/autopnp/ipa_room_segmentation/common/include/ipa_room_segmentation/: evaluation_segmentation.h  voronoi_random_field_segmentation.h
src/autopnp/ipa_room_segmentation/common/src/: abstract_voronoi_segmentation.cpp  adaboost_classifier.cpp  distance_segmentation.cpp  morphological_segmentation.cpp  raycasting.cpp  voronoi_random_field_features.cpp  voronoi_random_field_segmentation.cpp  voronoi_segmentation.cpp
src/autopnp/ipa_room_segmentation/ros/src/: room_segmentation_client.cpp  room_segmentation_server.cpp
src/ira_laser_tools/launch/: laserscan_multi_merger.launch
src/navgraph_solver/: .gitignore  CMakeLists.txt  README.md  bgp_plugin.xml  package.xml  rviz_plugin.xml
src/navgraph_solver/cfg/: navgraph.rviz  navgraph_flex.rviz  path_ws.yaml
src/navgraph_solver/include/navgraph_solver/: my_astar.h  navgraph_global_planner.h  waypoint_panel.h
src/navgraph_solver/launch/: nav_move_base.launch  navgraph_planner.launch
src/navgraph_solver/scripts/: gui.py
src/navgraph_solver/src/: my_astar.cpp  navgraph_global_planner.cpp  station_navigator.cpp  waypoint_panel.cpp
src/navgraph_solver/srv/: waypoint.srv
src/navigation/costmap_2d/: costmap_plugins.xml
src/scan_tools/laser_scan_matcher/demo/: Test_LSM_gmapping.launch
src/snap_map_icp/src/: SnapMapICP.cpp
src/uqtr_robot_simulator/: CMakeLists.txt
src/uqtr_robot_simulator/uqtr_robot/: CMakeLists.txt  package.xml
src/uqtr_robot_simulator/uqtr_robot/cfg/diff_drive/: base_global_planner_params.yaml  costmap_common_params.yaml  dwa_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/uqtr_robot_simulator/uqtr_robot/config/: diff_drive.yaml  joint_states.yaml
src/uqtr_robot_simulator/uqtr_robot/launch/: DWA.launch  TEB.launch  gazebo.launch  laser.launch  localization.launch  robot.launch
src/uqtr_robot_simulator/uqtr_robot/maps/: .yaml  new_world_map.yaml
src/uqtr_robot_simulator/uqtr_robot/meshes/: adis1647x_pcb.STL  capteur_laser_arriere.STL  capteur_laser_avant.STL  chassis.STL  chassis.dae  roue_motrice_droite.STL  roue_motrice_gauche.STL
src/uqtr_robot_simulator/uqtr_robot/params/DWA/: LCM_DWA.yaml  base_local_planner_params  test.yaml  test1dwa1.yaml  test2.yaml  test2dwa1.0.yaml  test2dwa1.0_2way.yaml  test3dwa1.0.yaml  test3dwa1.0_2way.yaml  test4dwa0.5.yaml  test4dwa1.0.yaml
src/uqtr_robot_simulator/uqtr_robot/params/TEB/: test1teb.yaml  test2teb++.yaml  test2teb+.yaml  test2teb1.5++.yaml  test2teb1.5+.yaml  test2teb1.5.yaml  test3teb0.5.yaml  test3teb1.0.yaml  test4teb05.yaml
src/uqtr_robot_simulator/uqtr_robot/params/TEB/MB/: LCM_1.2.yaml  TEB_1.2  TEB_1.2.yaml  movebase_1.2.yaml
src/uqtr_robot_simulator/uqtr_robot/rviz/: urdf.rviz
src/uqtr_robot_simulator/uqtr_robot/urdf/: material.xacro  model.sdf  model.urdf  properties.xacro  robot.urdf  robot.urdf.test.xacro  robot.urdf.xacro  transmission.xacro
src/uqtr_robot_simulator/uqtr_robot/world/: new_world.world
